--- a/automate-csv.ipynb
+++ b/automate-csv.ipynb
@@ -20,7 +20,7 @@
     "            \n",
     "        csv_read.drop([3, 4], axis=1, inplace=True) #3. drop unwanted columns -height column and label(REF and CLO)\n",
     "        \n",
-    "        csv_read.sort_values(by=[0], ascending=True, inplace=True) #4. sort by name, which is the regional number\n",
+    "        csv_read.sort_values(by=[0], ascending=True, inplace=True) #4. sort by name\n",
     "    \n",
     "        csv_read.to_csv(f\"CSV{n}.csv\", header=None, index=False) #5. overwrite csv and save in filepath\n",
     "    \n",
