--- a/automate-csv.ipynb
+++ b/automate-csv.ipynb
@@ -9,7 +9,6 @@
     "import pandas as pd, os, time\n",
     "filepath = os.getcwd()\n",
     "def automate_csv(filepath):\n",
-    "    n=1\n",
     "    for i in [csv for csv in os.listdir(filepath) if csv.endswith('.csv')]:\n",
     "        csv_read = pd.read_csv(i, header=None) #1. read csv\n",
     "    \n",
@@ -22,9 +21,8 @@
     "        \n",
     "        csv_read.sort_values(by=[0], ascending=True, inplace=True) #4. sort by name\n",
     "    \n",
-    "        csv_read.to_csv(f\"CSV{n}.csv\", header=None, index=False) #5. overwrite csv and save in filepath\n",
+    "        csv_read.to_csv(f\"{i}\", header=None, index=False) #5. overwrite csv and save in filepath\n",
     "    \n",
-    "        n+=1\n",
     "    return 'all done'"
    ]
   },
