--- a/automate-csv.ipynb
+++ b/automate-csv.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd, os, time\n",
+    "import pandas as pd, os, natsort, time\n",
     "filepath = os.getcwd()\n",
     "def automate_csv(filepath):\n",
     "    for i in [csv for csv in os.listdir(filepath) if csv.endswith('.csv')]:\n",
@@ -19,7 +19,7 @@
     "            \n",
     "        csv_read.drop([3, 4], axis=1, inplace=True) #3. drop unwanted columns -height column and label(REF and CLO)\n",
     "        \n",
-    "        csv_read.sort_values(by=[0], ascending=True, inplace=True) #4. sort by name\n",
+    "        csv_read.sort_values(by=[0], key=natsort.natsort_keygen(), ascending=True, inplace=True) #4. sort by name\n",
     "    \n",
     "        csv_read.to_csv(f\"{i}\", header=None, index=False) #5. overwrite csv and save in filepath\n",
     "    \n",
