Fix natural sorting by using natsort

--- a/automate-csv.ipynb
+++ b/automate-csv.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd, os, natsort, time\n",
+    "import pandas as pd, os, natsort, \n",
     "filepath = os.getcwd()\n",
     "def automate_csv(filepath):\n",
     "    for i in [csv for csv in os.listdir(filepath) if csv.endswith('.csv')]:\n",
